Fixed partial video issue.

--- a/beestream/public/app/header/header.template.html
+++ b/beestream/public/app/header/header.template.html
@@ -1,5 +1,5 @@
-<div>
-  <a [routerLink]="['/']">BeeStream</a>
-  <a [routerLink]="['/stream']">Stream</a>
-  <a [routerLink]="['/archive']">Archive</a>
+ <div class="header">
+    <a [routerLink]="['/']" class="header-link">BeeStream</a>
+    <a [routerLink]="['/stream']" class="header-link">Stream</a>
+    <a [routerLink]="['/archive']" class="header-link">Archive</a>
 </div>
