--- a/beestream/public/app/stream/stream.template.html
+++ b/beestream/public/app/stream/stream.template.html
@@ -2,11 +2,13 @@
   <h1>Stream</h1>
   <p *ngIf="error != null">Uh oh, we ran into an issue!  {{error}}</p>
   <form>
-    <select name="streamHiveSelect" [(ngModel)]="streamHiveSelect">
-      <option [ngValue]="null">Choose a Hive</option>
-      <option *ngFor="let hive of hives" [ngValue]="hive">{{hive}}</option>
-    </select>
-    <button (click)="onSubmit()">View</button>
+    <div class="dropdown-div">
+      <select class="dropdown" name="streamHiveSelect" [(ngModel)]="streamHiveSelect">
+        <option [ngValue]="null">Choose a Hive</option>
+        <option *ngFor="let hive of hives" [ngValue]="hive">{{hive}}</option>
+      </select>
+    </div>
+    <button class="main-button" (click)="onSubmit()">View</button>
   </form>
 </div>
 <div *ngIf="videoLoading && error == null">
@@ -14,7 +16,7 @@
 </div>
 <div *ngIf="videoUrl != null && error == null">
   <h2>Video from {{videoUrl.substr(videoUrl.length - 8).replace('-', ':').replace('-', ':')}}</h2>
-  <video #VideoStream (canplay)="onSubmit()" (ended)="onSubmit()" [src] = "videoUrl" controls autoplay loop>
+  <video class="video" #VideoStream id="video" (canplay)="onSubmit()" (ended)="onSubmit()" [src] = "videoUrl" controls autoplay loop>
     Your browser doesn't support HTML5 video.
   </video>
 </div>
