--- a/beestream/public/app/stream/stream.template.html
+++ b/beestream/public/app/stream/stream.template.html
@@ -14,7 +14,7 @@
 <div *ngIf="videoLoading && error == null">
   <p>Video Loading</p>
 </div>
-<div *ngIf="videoUrl != null && error == null">
+<div *ngIf="videoUrl != null && error == null && correctLength == true">
   <h2>Video from {{videoUrl.substr(videoUrl.length - 8).replace('-', ':').replace('-', ':')}}</h2>
   <video class="video" #VideoStream id="video" (canplay)="onSubmit()" (ended)="onSubmit()" [src] = "videoUrl" controls autoplay loop>
     Your browser doesn't support HTML5 video.
