--- a/beestream/public/app/stream/stream.template.html
+++ b/beestream/public/app/stream/stream.template.html
@@ -11,12 +11,21 @@
     <button class="main-button" (click)="onSubmit()">View</button>
   </form>
 </div>
-<div *ngIf="videoLoading && error == null">
-  <p>Video Loading</p>
+<div class="video-title-div" *ngIf="videoUrl != null && error == null && correctLength == true && hive != null && date != null && time != null">
+  <h2>Video from {{hive}} on {{date}} at {{time}}.</h2>
 </div>
-<div *ngIf="videoUrl != null && error == null && correctLength == true">
-  <h2>Video from {{videoUrl.substr(videoUrl.length - 8).replace('-', ':').replace('-', ':')}}</h2>
-  <video class="video" #VideoStream id="video" (canplay)="onSubmit()" (ended)="onSubmit()" [src] = "videoUrl" controls autoplay loop>
-    Your browser doesn't support HTML5 video.
-  </video>
+<div class="video-and-comments">
+  <div class="video-div">
+    <div *ngIf="videoLoading && error == null">
+      <p>Video Loading</p>
+    </div>
+    <div *ngIf="videoUrl != null && error == null && correctLength == true">
+      <video class="video" #VideoStream id="video" (canplay)="onSubmit()" (ended)="onSubmit()" [src] = "videoUrl" controls autoplay loop>
+        Your browser doesn't support HTML5 video.
+      </video>
+    </div>
+  </div>
+  <comments *ngIf="videoUrl != null && error == null && correctLength == true"
+    [video]="videoUrl">
+  </comments>
 </div>
