Implemented a fix for occasional 404 error.

--- a/beestream/public/app/stream/stream.template.html
+++ b/beestream/public/app/stream/stream.template.html
@@ -39,7 +39,7 @@
   <comments [video]="videoUrl">
   </comments>
 </div>
-<video *ngIf="videoUrl"
+<video *ngIf="videoUrl && !error"
        #VideoStream
        [src]="videoUrl"
        (loadedmetadata)="checkDuration(VideoStream, hive)"
