progress towards data filtering

--- a/beestream/public/app/dashboard/dashboard.template.html
+++ b/beestream/public/app/dashboard/dashboard.template.html
@@ -1,29 +1,15 @@
 <div>
   <h1>Test</h1>
 </div>
-<div class="row">
-  <div class="col-md-6">
-    <div style="display: block;">
-    <canvas baseChart width="200" height="300"
-                [datasets]="lineChartData"
-                [labels]="lineChartLabels"
-                [options]="lineChartOptions"
-                [colors]="lineChartColors"
-                [legend]="lineChartLegend"
-                [chartType]="lineChartType"
-                (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)"></canvas>
-    </div>
+<div>
+  <div class="dashboard-hive-select" *ngIf="hives">
+    <form #HiveForm="ngForm">
+      <mat-checkbox *ngFor="let hive of hives"
+          name="{{hive}}"
+          (ngModelChange)="getAnalysis(HiveForm)"
+          ngModel>{{hive}}</mat-checkbox>
+      <button mat-button type="submit">Get Analysis</button>
+    </form>
   </div>
-  <div class="col-md-6" style="margin-bottom: 10px">
-    <table class="table table-responsive table-condensed">
-      <tr>
-        <th *ngFor="let label of lineChartLabels">{{label}}</th>
-      </tr>
-      <tr *ngFor="let d of lineChartData">
-        <td *ngFor="let label of lineChartLabels; let j=index">{{d && d.data[j]}}</td>
-      </tr>
-    </table>
-    <button (click)="randomize()">CLICK</button>
-  </div>
+  <div id="chart">Loading</div>
 </div>
