--- a/beestream/public/app/dashboard/dashboard.template.html
+++ b/beestream/public/app/dashboard/dashboard.template.html
@@ -38,7 +38,6 @@
     *ngIf="(!(hives && startDateFilter && endDateFilter)) || dataLoading">
       <mat-spinner class=dashboard-loading diameter="50"></mat-spinner>
   </div>
-  <div class="dashboard-chart{{dataReceived ? '' : '-invisible'}}">
-    <div id="chart">Loading</div>
-  </div>
 </div>
+<arrivals-chart #ArrivalsChart></arrivals-chart>
+<departures-chart #DeparturesChart></departures-chart>
