Final package updates, fixes, and dashboard link on header

--- a/beestream/public/app/dashboard/dashboard-charts/departures-chart/departureschart.template.html
+++ b/beestream/public/app/dashboard/dashboard-charts/departures-chart/departureschart.template.html
@@ -1,4 +1,4 @@
-<div class="dashboard-chart{{showChart ? '' : '-invisible'}}">
+<div class="dashboard-chart-div{{showChart ? '' : '-invisible'}}">
   <h3>Departures</h3>
-  <div id="departures-chart">Loading</div>
+  <div id="departures-chart" class="dashboard-chart">Loading</div>
 </div>
