--- a/beestream/public/app/header/header.template.html
+++ b/beestream/public/app/header/header.template.html
@@ -2,4 +2,5 @@
     <a [routerLink]="['/']" class="header-link">BeeStream</a>
     <a [routerLink]="['/stream']" class="header-link">Stream</a>
     <a [routerLink]="['/archive']" class="header-link">Archive</a>
+    <a [routerLink]="['/dashboard']" class="header-link">Dashboard</a>
 </div>
