--- a/beestream/public/app/dashboard/dashboard-charts/arrivals-chart/arrivalschart.template.html
+++ b/beestream/public/app/dashboard/dashboard-charts/arrivals-chart/arrivalschart.template.html
@@ -1,4 +1,4 @@
-<div class="dashboard-chart{{showChart ? '' : '-invisible'}}">
+<div class="dashboard-chart-div{{showChart ? '' : '-invisible'}}">
   <h3>Arrivals</h3>
-  <div id="arrivals-chart">Loading</div>
+  <div id="arrivals-chart" class="dashboard-chart">Loading</div>
 </div>
