Progress towards channel architecture integration

--- a/beestream/public/app/dashboard/dashboard.template.html
+++ b/beestream/public/app/dashboard/dashboard.template.html
@@ -41,3 +41,4 @@
 </div>
 <arrivals-chart #ArrivalsChart></arrivals-chart>
 <departures-chart #DeparturesChart></departures-chart>
+<rmslinear-chart #RMSLinearChart></rmslinear-chart>
