--- a/beestream/public/app/dashboard/dashboard.template.html
+++ b/beestream/public/app/dashboard/dashboard.template.html
@@ -42,3 +42,4 @@
 <arrivals-chart #ArrivalsChart></arrivals-chart>
 <departures-chart #DeparturesChart></departures-chart>
 <rmslinear-chart #RMSLinearChart></rmslinear-chart>
+<temperature-chart #TemperatureChart></temperature-chart>
