--- a/beestream/public/app/dashboard/dashboard-charts/rmslinear-chart/rmslinearchart.template.html
+++ b/beestream/public/app/dashboard/dashboard-charts/rmslinear-chart/rmslinearchart.template.html
@@ -1,4 +1,4 @@
 <div class="dashboard-chart-div{{showChart ? '' : '-invisible'}}">
   <h3>RMS</h3>
-  <div id="rmslinear-chart" class="dashboard-chart">Loading</div>
+  <div id="rmslinear-chart" class="dashboard-chart"></div>
 </div>
