Weather widget now only shows time if the data was aggregated over hours, not days

--- a/beestream/public/app/dashboard/dashboard.template.html
+++ b/beestream/public/app/dashboard/dashboard.template.html
@@ -40,6 +40,7 @@
   </div>
   <weather-widget
     [focused]=focusedData
+    [aggregateMethod]=aggregateMethod
     #WeatherWidget></weather-widget>
   <div class="chart-div">
     <arrivals-chart
